# delegate

./: CMakeLists.txt  bfdelegate.h  test.cpp
inheritance/: delegate.h  test.cpp
placement/: delegate.h  test.cpp
stdfunc/: delegate.h  test.cpp
